#This library is free software; you can redistribute it and/or
#modify it under the terms of the GNU Lesser General Public
#License as published by the Free Software Foundation version 2.1
#of the License.
#
#Copyright(c) 2021-2023 Huawei Device Co., Ltd.

if (!defined(ohos_lite)) {
  import("//build/ohos.gni")
}

libnl_path = rebase_path("//third_party/libnl")
exec_script("install.sh", [ "$libnl_path" ])

config("libnl_share_public_config") {
  include_dirs = [ "//third_party/libnl/libnl/include/" ]
}

action("build_grammar") {
  script = "/usr/bin/env"
  outputs = [ "$target_out_dir/gen/lib/route/pktloc_grammar.c" ]
  grammer_hh = rebase_path("$target_out_dir/gen/lib/route/pktloc_grammar.h")
  args = [
    "flex",
    "--header-file=$grammer_hh",
    "-o",
    rebase_path("$target_out_dir/gen/lib/route/pktloc_grammar.c"),
    rebase_path("libnl/lib/route/pktloc_grammar.l"),
  ]
}

action("pktloc_syntax") {
  script = "/usr/bin/env"
  outputs = [ "$target_out_dir/gen/lib/route/pktloc_syntax.c" ]
  args = [
    "bison",
    "-y",
    "-d",
    "-o",
    rebase_path("$target_out_dir/gen/lib/route/pktloc_syntax.c"),
    rebase_path("libnl/lib/route/pktloc_syntax.y"),
  ]
}

action("ematch_grammar") {
  script = "/usr/bin/env"
  outputs = [ "$target_out_dir/gen/lib/route/cls/ematch_grammar.c" ]
  grammer_hh = rebase_path("$target_out_dir/gen/lib/route/cls/ematch_grammar.h")
  args = [
    "flex",
    "--header-file=$grammer_hh",
    "-o",
    rebase_path("$target_out_dir/gen/lib/route/cls/ematch_grammar.c"),
    rebase_path("libnl/lib/route/cls/ematch_grammar.l"),
  ]
}

action("ematch_syntax") {
  script = "/usr/bin/env"
  outputs = [ "$target_out_dir/gen/lib/route/cls/ematch_syntax.c" ]
  args = [
    "bison",
    "-y",
    "-d",
    "-o",
    rebase_path("$target_out_dir/gen/lib/route/cls/ematch_syntax.c"),
    rebase_path("libnl/lib/route/cls/ematch_syntax.y"),
  ]
}
if (!defined(ohos_lite)) {
  ohos_shared_library("libnl_share") {
    branch_protector_ret = "pac_ret"
    grammer_outputs = get_target_outputs(":build_grammar")
    grammer_path = get_path_info(grammer_outputs[0], "dir")
    pktloc_outputs = get_target_outputs(":pktloc_syntax")
    pktloc_path = get_path_info(pktloc_outputs[0], "dir")
    ematch_outputs = get_target_outputs(":ematch_grammar")
    ematch_path = get_path_info(ematch_outputs[0], "dir")
    syntax_outputs = get_target_outputs(":ematch_syntax")
    syntax_path = get_path_info(syntax_outputs[0], "dir")

    include_dirs = [
      "libnl",
      "libnl/include",
      "libnl/lib",
      "libnl/lib/route/cls",
      "libnl/lib/route",
    ]

    include_dirs += [
      rebase_path("$grammer_path"),
      rebase_path("$pktloc_path"),
      rebase_path("$ematch_path"),
      rebase_path("$syntax_path"),
    ]

    public_configs = [ ":libnl_share_public_config" ]

    sources = [
      "libnl/lib/addr.c",
      "libnl/lib/attr.c",
      "libnl/lib/cache.c",
      "libnl/lib/cache_mngr.c",
      "libnl/lib/cache_mngt.c",
      "libnl/lib/data.c",
      "libnl/lib/error.c",
      "libnl/lib/handlers.c",
      "libnl/lib/hash.c",
      "libnl/lib/hashtable.c",
      "libnl/lib/mpls.c",
      "libnl/lib/msg.c",
      "libnl/lib/nl.c",
      "libnl/lib/object.c",
      "libnl/lib/socket.c",
      "libnl/lib/utils.c",
      "libnl/lib/version.c",
      "libnl/lib/fib_lookup/lookup.c",
      "libnl/lib/fib_lookup/request.c",
      "libnl/lib/genl/ctrl.c",
      "libnl/lib/genl/family.c",
      "libnl/lib/genl/genl.c",
      "libnl/lib/genl/mngt.c",
      "libnl/lib/idiag/idiag.c",
      "libnl/lib/idiag/idiag_meminfo_obj.c",
      "libnl/lib/idiag/idiag_msg_obj.c",
      "libnl/lib/idiag/idiag_req_obj.c",
      "libnl/lib/idiag/idiag_vegasinfo_obj.c",
      "libnl/lib/netfilter/ct.c",
      "libnl/lib/netfilter/ct_obj.c",
      "libnl/lib/netfilter/exp.c",
      "libnl/lib/netfilter/exp_obj.c",
      "libnl/lib/netfilter/log.c",
      "libnl/lib/netfilter/log_msg.c",
      "libnl/lib/netfilter/log_msg_obj.c",
      "libnl/lib/netfilter/log_obj.c",
      "libnl/lib/netfilter/netfilter.c",
      "libnl/lib/netfilter/nfnl.c",
      "libnl/lib/netfilter/queue.c",
      "libnl/lib/netfilter/queue_msg.c",
      "libnl/lib/netfilter/queue_msg_obj.c",
      "libnl/lib/netfilter/queue_obj.c",
      "libnl/lib/route/act.c",
      "libnl/lib/route/addr.c",
      "libnl/lib/route/class.c",
      "libnl/lib/route/classid.c",
      "libnl/lib/route/cls.c",
      "libnl/lib/route/link.c",
      "libnl/lib/route/mdb.c",
      "libnl/lib/route/neigh.c",
      "libnl/lib/route/neightbl.c",
      "libnl/lib/route/netconf.c",
      "libnl/lib/route/nexthop.c",
      "libnl/lib/route/nexthop_encap.c",
      "libnl/lib/route/nh_encap_mpls.c",
      "libnl/lib/route/pktloc.c",
      rebase_path("$grammer_path/pktloc_grammar.c"),
      rebase_path("$pktloc_path/pktloc_syntax.c"),
      "libnl/lib/route/qdisc.c",
      "libnl/lib/route/route.c",
      "libnl/lib/route/route_obj.c",
      "libnl/lib/route/route_utils.c",
      "libnl/lib/route/rtnl.c",
      "libnl/lib/route/rule.c",
      "libnl/lib/route/tc.c",
      "libnl/lib/route/act/gact.c",
      "libnl/lib/route/act/mirred.c",
      "libnl/lib/route/act/nat.c",
      "libnl/lib/route/act/skbedit.c",
      "libnl/lib/route/act/vlan.c",
      "libnl/lib/route/cls/basic.c",
      "libnl/lib/route/cls/cgroup.c",
      "libnl/lib/route/cls/ematch.c",
      rebase_path("$ematch_path/ematch_grammar.c"),
      rebase_path("$syntax_path/ematch_syntax.c"),
      "libnl/lib/route/cls/flower.c",
      "libnl/lib/route/cls/fw.c",
      "libnl/lib/route/cls/mall.c",
      "libnl/lib/route/cls/police.c",
      "libnl/lib/route/cls/u32.c",
      "libnl/lib/route/cls/ematch/cmp.c",
      "libnl/lib/route/cls/ematch/container.c",
      "libnl/lib/route/cls/ematch/meta.c",
      "libnl/lib/route/cls/ematch/nbyte.c",
      "libnl/lib/route/cls/ematch/text.c",
      "libnl/lib/route/link/api.c",
      "libnl/lib/route/link/bonding.c",
      "libnl/lib/route/link/bridge.c",
      "libnl/lib/route/link/can.c",
      "libnl/lib/route/link/dummy.c",
      "libnl/lib/route/link/geneve.c",
      "libnl/lib/route/link/ifb.c",
      "libnl/lib/route/link/inet6.c",
      "libnl/lib/route/link/inet.c",
      "libnl/lib/route/link/ip6gre.c",
      "libnl/lib/route/link/ip6tnl.c",
      "libnl/lib/route/link/ip6vti.c",
      "libnl/lib/route/link/ipgre.c",
      "libnl/lib/route/link/ipip.c",
      "libnl/lib/route/link/ipvlan.c",
      "libnl/lib/route/link/ipvti.c",
      "libnl/lib/route/link/macsec.c",
      "libnl/lib/route/link/macvlan.c",
      "libnl/lib/route/link/ppp.c",
      "libnl/lib/route/link/sit.c",
      "libnl/lib/route/link/sriov.c",
      "libnl/lib/route/link/team.c",
      "libnl/lib/route/link/veth.c",
      "libnl/lib/route/link/vlan.c",
      "libnl/lib/route/link/vrf.c",
      "libnl/lib/route/link/vxlan.c",
      "libnl/lib/route/link/xfrmi.c",
      "libnl/lib/route/qdisc/blackhole.c",
      "libnl/lib/route/qdisc/cbq.c",
      "libnl/lib/route/qdisc/dsmark.c",
      "libnl/lib/route/qdisc/fifo.c",
      "libnl/lib/route/qdisc/fq_codel.c",
      "libnl/lib/route/qdisc/hfsc.c",
      "libnl/lib/route/qdisc/htb.c",
      "libnl/lib/route/qdisc/ingress.c",
      "libnl/lib/route/qdisc/mqprio.c",
      "libnl/lib/route/qdisc/netem.c",
      "libnl/lib/route/qdisc/plug.c",
      "libnl/lib/route/qdisc/prio.c",
      "libnl/lib/route/qdisc/red.c",
      "libnl/lib/route/qdisc/sfq.c",
      "libnl/lib/route/qdisc/tbf.c",
      "libnl/lib/xfrm/ae.c",
      "libnl/lib/xfrm/lifetime.c",
      "libnl/lib/xfrm/sa.c",
      "libnl/lib/xfrm/selector.c",
      "libnl/lib/xfrm/sp.c",
      "libnl/lib/xfrm/template.c",
      "libnl/lib/cli/cls/basic.c",
      "libnl/lib/cli/cls/cgroup.c",
      "libnl/lib/cli/qdisc/bfifo.c",
      "libnl/lib/cli/qdisc/blackhole.c",
      "libnl/lib/cli/qdisc/fq_codel.c",
      "libnl/lib/cli/qdisc/hfsc.c",
      "libnl/lib/cli/qdisc/htb.c",
      "libnl/lib/cli/qdisc/ingress.c",
      "libnl/lib/cli/qdisc/pfifo.c",
      "libnl/lib/cli/qdisc/plug.c",
      "libnl/src/lib/addr.c",
      "libnl/src/lib/class.c",
      "libnl/src/lib/cls.c",
      "libnl/src/lib/ct.c",
      "libnl/src/lib/exp.c",
      "libnl/src/lib/link.c",
      "libnl/src/lib/neigh.c",
      "libnl/src/lib/qdisc.c",
      "libnl/src/lib/route.c",
      "libnl/src/lib/rule.c",
      "libnl/src/lib/tc.c",
      "libnl/src/lib/utils.c",
    ]

    deps = [
      ":build_grammar",
      ":ematch_grammar",
      ":ematch_syntax",
      ":pktloc_syntax",
    ]
    defines = [ "NL_DEBUG" ]
    cflags = [
      "-Wno-error",
      "-D_BSD_SOURCE",
      "-D_GNU_SOURCE",
      "-DNL_DEBUG",

      #"-UNDEBUG",
      "-DSYSCONFDIR=\"\\\"/etc/libnl\\\"\"",
      "-D_NL_SYSCONFDIR_LIBNL=\"\\\"/usr/local/ect/libnl\\\"\"",
      "-D_NL_PKGLIBDIR==\"\\\"/usr/local/lib/libnl\\\"\"",
    ]

    install_images = [
      "system",
      "updater",
    ]
    innerapi_tags = [ "chipsetsdk" ]
    part_name = "libnl"
    subsystem_name = "thirdparty"
  }
}
